added API documentation for PartnerController by creating components references - created AbstractAPIController to clean controllers - fixed PartnerController and DoctrineCacheConverter to manage cache with controller forwarding when partner details are requested thanks to his email - cleaned SecurityController API documentation
