# src/Controller/PartnerController.php
@@ -26,28 +26,34 @@ use Symfony\Component\Routing\Annotation\Route;
  *
  * Please note that an administrator can access any partner data.
  *
+ * @OA\Response(
+ *     response=400,
+ *     ref="#/components/responses/bad_request"
+ * )
+ * @OA\Response(
+ *     response=401,
+ *     ref="#/components/responses/unauthorized"
+ * )
+ * @OA\Response(
+ *     response=403,
+ *     ref="#/components/responses/forbidden"
+ * )
+ * @OA\Response(
+ *     response=404,
+ *     ref="#/components/responses/not_found"
+ * )
+ * @OA\Response(
+ *     response=500,
+ *     ref="#/components/responses/internal"
+ * )
+ *
  * @OA\Tag(name="Partner requests to manage his own data")
  *
  * @see https://symfony.com/doc/current/controller/forwarding.html
  * @see https://symfony.com/doc/current/bundles/SensioFrameworkExtraBundle/annotations/converters.html#creating-a-converter
  */
-class PartnerController extends AbstractController
+class PartnerController extends AbstractAPIController
 {
-    /**
-     * @var ResponseBuilder
-     */
-    private $responseBuilder;
-
-    /**
-     * @var SerializerInterface
-     */
-    private $serializer;
-
-    /**
-     * @var SerializationContext
-     */
-    private $serializationContext;
-
     /**
      * PartnerController constructor.
      *
@@ -56,9 +62,7 @@ class PartnerController extends AbstractController
     public function __construct(
         ResponseBuilder $responseBuilder
     ) {
-        $this->responseBuilder = $responseBuilder;
-        $this->serializer = $responseBuilder->getSerializationProvider()->getSerializer();
-        $this->serializationContext = $responseBuilder->getSerializationProvider()->getSerializationContext();
+        parent::__construct($responseBuilder);
     }
 
     /**
@@ -74,6 +78,53 @@ class PartnerController extends AbstractController
      *     maxage="httpCache.getTtlExpiration()",
      *     lastModified="httpCache.getUpdateDate()",
      *     etag="httpCache.getEtagToken()"
+     * )
+     *
+     * @OA\Get(
+     *     description="Get partner details by uuid as path attribute",
+     *     @OA\Parameter(
+     *          in="path",
+     *          name="uuid",
+     *          description="A partner uuid",
+     *          @OA\Schema(
+     *              pattern="[\w-]{36}",
+     *              type="string"
+     *          )
+     *     )
+     * )
+     *
+     * @OA\Response(
+     *     response=200,
+     *     description="Get current authenticated partner details",
+     *     @ApiDoc\Model(type=Partner::class, groups={"Partner_detail"}),
+     *     @OA\Header(
+     *          header="Content-Type",
+     *          ref="#/components/headers/content_type"
+     *     ),
+     *     @OA\Header(
+     *          header="Cache-Control",
+     *          ref="#/components/headers/cache_control"
+     *     ),
+     *     @OA\Header(
+     *          header="Etag",
+     *          ref="#/components/headers/etag"
+     *     ),
+     *     @OA\Header(
+     *          header="Last-Modified",
+     *          ref="#/components/headers/last_modified"
+     *     ),
+     *     @OA\Header(
+     *          header="X-App-Cache-Id",
+     *          ref="#/components/headers/x_cache_id"
+     *     ),
+     *     @OA\Header(
+     *          header="X-App-Cache-Ttl",
+     *          ref="#/components/headers/x_cache_ttl"
+     *     ),
+     *     @OA\Header(
+     *          header="Vary",
+     *          ref="#/components/headers/vary"
+     *    )
      * )
      *
      * @param Partner   $partner
@@ -129,19 +180,77 @@ class PartnerController extends AbstractController
      * No cache is used here due to email attribute which could be treated as a particular case
      * with API custom DoctrineCacheConverter and HTTPCacheConverter.
      *
-     * @param Partner $partner
+     * @Cache(
+     *     public=true,
+     *     maxage="httpCache.getTtlExpiration()",
+     *     lastModified="httpCache.getUpdateDate()",
+     *     etag="httpCache.getEtagToken()"
+     * )
+     *
+     * @OA\Get(
+     *     description="Get partner details by email as path attribute",
+     *     @OA\Parameter(
+     *          in="path",
+     *          name="email",
+     *          description="A partner unique email",
+     *          @OA\Schema(
+     *              pattern="[a-zA-Z0-9_.-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+",
+     *              type="string"
+     *          )
+     *     )
+     * )
+     *
+     * @OA\Response(
+     *     response=200,
+     *     description="Get current authenticated partner details",
+     *     @ApiDoc\Model(type=Partner::class, groups={"Partner_detail"}),
+     *     @OA\Header(
+     *          header="Content-Type",
+     *          ref="#/components/headers/content_type"
+     *     ),
+     *     @OA\Header(
+     *          header="Cache-Control",
+     *          ref="#/components/headers/cache_control"
+     *     ),
+     *     @OA\Header(
+     *          header="Etag",
+     *          ref="#/components/headers/etag"
+     *     ),
+     *     @OA\Header(
+     *          header="Last-Modified",
+     *          ref="#/components/headers/last_modified"
+     *     ),
+     *     @OA\Header(
+     *          header="X-App-Cache-Id",
+     *          ref="#/components/headers/x_cache_id"
+     *     ),
+     *     @OA\Header(
+     *          header="X-App-Cache-Ttl",
+     *          ref="#/components/headers/x_cache_ttl"
+     *     ),
+     *     @OA\Header(
+     *          header="Vary",
+     *          ref="#/components/headers/vary"
+     *     )
+     * )
+     *
+     * @param Partner   $partner
+     * @param HTTPCache $httpCache
+     *
+     * @ParamConverter("partner", converter="doctrine.cache.custom_converter")
+     * @ParamConverter("httpCache", converter="http.cache.custom_converter")
      *
      * @return JsonResponse
      *
      * @Route({
      *     "en": "/partners/{email<[a-zA-Z0-9_.-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+>}"
-     * }, name="show_partner_by_email", methods={"GET"})
+     * }, defaults={"entityType"=Partner::class, "isCollection"=false}, name="show_partner_by_email", methods={"GET"})
      *
      * @throws \Exception
      */
-    public function showPartnerByEmail(Partner $partner): Response
+    public function showPartnerByEmail(Partner $partner, HTTPCache $httpCache): Response
     {
         // Return the same response as "showPartner" method with forwarding shortcut
-        return $this->forward(self::class . '::showPartner', ['partner' => $partner]);
+        return $this->forward(self::class . '::showPartner', ['partner' => $partner, 'httpCache' => $httpCache]);
     }
 }
